# stock-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  check_ecos_codes.py  check_m2.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
datas/: README.md
datas/dart/: README.md  collect_contents.py  collect_financials.py  collect_heavyweights.py  collect_prices.py  collector.py  enrich_companies.py  test.py
datas/macro/: README.md  collector.py
datas/news/: README.md  collector.py  embed_news.py  news_collector.py  preprocess_news.py
db/: README.md
db/init/: 001_create_raw_tables.sql  002_create_rag_pgvector.sql  README.md
docs/: README.md  api.html  glossary.md  시각자료_인덱스.html
docs/agents/: README.md  competitor_agent_flow.html  competitor_agent_mvp.html  competitor_agent_mvp.md  guardrail.md  macro_agent_flow.html  news_rag_pipeline.html  qual_agent_flow.html  qual_news_presentation.html  qual_news_presentation_script.md  tier3_downloads.md
docs/ai/: README.md  ai_summary_1pager.md  eval_report.md  model_card.md  orchestration.md  prompt_spec.md
docs/architecture/: README.md  agent_design.md  agent_flow_dashboard.html  api.html  backtesting_demo_architecture.md  backtesting_demo_dashboard.html  canonical_diagrams.md  competitor_architecture.html  erd.md  erd_dashboard.html  multi_agent_architecture.md  multi_agent_architecture_review.html  multi_agent_pm_review.html  multi_agent_pm_review.md  pipeline_11node_groundtruth.md  readme_system_architecture.md  system_architecture_dashboard.html  system_flow.md  user_intake_agent_handoff.md
docs/assets/: README.md
docs/decisions/: ADR-001-data-arch-postgres-chroma.md  ADR-001-data-arch-postgres-pgvector.md  ADR-002-critic-separation-vs-merge.md  ADR-003-six-agent-structure.md  ADR-004-monthly-cost-cap.md  ADR-005-eleven-node-langgraph.md  README.md
docs/feedback/: 2026-05-31_강사검토리포트_d24b475.md  2026-06-13_강사재검토리포트_93487d3.md  2026-06-13_갭분석_파트별_강화계획_v1.0.md  2026-06-20_강사재검토리포트_92237ba.md  README.md
docs/functional-spec/: IMPLEMENTATION_STATUS.md  README.md  functional_spec_dashboard.html  functional_spec_v0.1.md
docs/guides/: README.md  streamlit_ui_improvement_proposal.md
docs/interface/: README.md  interface_spec.md
docs/md/: README.md  프로젝트_문서_마스터인덱스.md
docs/notion/: README.md  architecture.md  database.md
docs/operations/: README.md  db_connection_guide.md  llm_cost_guide.md  pm_workflow_guide.md
docs/prd/: PRD_v0.6.md  README.md
docs/presentation/: README.md  build_final_presentation_html.mjs  build_final_presentation_pdf.py  build_final_presentation_pptx.mjs  final_presentation.html  final_presentation.pptx  final_presentation_qa.html  final_presentation_script.html  final_presentation_source.json  midterm_presentation.html
docs/report/: README.md  result_report.md
docs/requirements/: README.md  srs.md
docs/research/: README.md  market_research.md
docs/roadmap/: README.md  user_intake_multi_agent_todo.md  문서화_진행_대시보드.html
docs/superpowers/: README.md
docs/testing/: README.md  test_spec.md
docs/usecase/: README.md  usecase_spec.md
eval/: README.md  run_benchmark.py  run_competitor_eval.py  run_rag_retriever_eval.py
eval/competitor_golden/: README.md  cases.json
eval/golden_set/: README.md  expected_outputs.json  (+1 more)
notebooks/: README.md  competitor_agent_walkthrough.ipynb
pages/: README.md
scripts/: README.md  apply_db_schema.py  check_db.py  mcp_external_consumer_demo.py  mcp_peer_handshake_demo.py  run_local_streamlit.sh  run_user_intake_demo.py  test_curator_integration.py
src/: README.md
tests/: README.md  test_competitor_eval.py  test_competitor_schema.py  test_eval_harness.py  test_intake.py  test_observability.py  test_phase1_pipeline.py  test_quant_agent.py  test_recomposer.py  test_result_renderer.py  test_streamlit_intake.py
ui/: README.md
(+139 files in other folders)
