[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-agent"
version = "0.1.0"
description = "Financial data collection project for news, macro indicators, and DART company analysis data."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.4.0",
    "requests>=2.32.0",
    "streamlit>=1.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
