[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-agent"
version = "0.1.0"
description = "Financial data collection project for news, macro indicators, and DART company analysis data."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.0",
    "psycopg[binary]>=3.2.0",
    # quant.py·tools(financial/price/rag_tool)·datas 수집 스크립트가 psycopg2를 직접 import한다.
    # psycopg(v3)로 통일 전까지 두 드라이버를 함께 선언해 ImportError를 막는다. (검토 리포트 권고 2번)
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.4.0",
    "requests>=2.32.0",
    "streamlit>=1.37.0",
    "pgvector>=0.3.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
# RAGAS 평가 하네스(eval/run_benchmark.py) 전용. 본 앱 실행에는 불필요해 분리한다.
# 주의: ragas 0.4.x는 langchain 1.x와 비호환 → langchain 계열을 0.3.x로 고정한다.
eval = [
    "ragas>=0.2.0,<0.5",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.2,<0.4",
    "langchain-huggingface>=0.1,<0.2",
    "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
# editable install 없이도 pytest가 src 레이아웃 패키지를 찾도록 경로 주입
pythonpath = ["src"]
