[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-agent"
version = "0.1.0"
description = "Financial data collection project for news, macro indicators, and DART company analysis data."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.0",
    "psycopg[binary]>=3.2.0",
    # quant.py·tools(financial/price/rag_tool)·datas 수집 스크립트가 psycopg2를 직접 import한다.
    # psycopg(v3)로 통일 전까지 두 드라이버를 함께 선언해 ImportError를 막는다. (검토 리포트 권고 2번)
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.4.0",
    "requests>=2.32.0",
    "streamlit>=1.37.0",
    "langgraph>=0.2.0",
    "langfuse>=2.0.0",
    "pgvector>=0.3.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
# MCP 데이터 브리지(mcp_bridge/) 전용. Competitor의 DB 미연결 폴백이 자체 MCP 서버를
# in-process로 호출해 pykrx 실시간 시세 기반 peer 비교를 확보한다(루브릭 #6 "실동작 1경로").
# 본 앱의 DB 정상 경로 실행에는 불필요해 분리한다. 미설치 시 모듈이 graceful하게 비활성화된다.
mcp = [
    "mcp>=1.2.0",
    "pykrx>=1.0.45",
]
# RAGAS 평가 하네스(eval/run_benchmark.py) 전용. 본 앱 실행에는 불필요해 분리한다.
# 주의: ragas 0.4.x는 langchain 1.x와 비호환 → langchain 계열을 0.3.x로 고정한다.
eval = [
    "ragas>=0.2.0,<0.5",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.2,<0.4",
    "langchain-huggingface>=0.1,<0.2",
    "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
# editable install 없이도 pytest가 src 레이아웃 패키지를 찾도록 경로 주입
pythonpath = ["src"]
markers = [
    "openrouter_smoke: real OpenRouter Qwen smoke test, skipped unless OPENROUTER_API_KEY is set",
]
